--- a/src/pages/WorkInfo/components/WorkModals.tsx/style.module.scss
+++ b/src/pages/WorkInfo/components/WorkModals.tsx/style.module.scss
@@ -10,7 +10,7 @@
     transition: all 2s;
     .modalWp{
         width: 100%;
-        height: 80vh;
+        // height: 80vh;
         padding:32px;
         position: fixed;
         bottom:0;
