--- a/src/pages/WorkInfo/style.module.scss
+++ b/src/pages/WorkInfo/style.module.scss
@@ -16,7 +16,7 @@
         flex-direction: column;
         justify-content: space-between;
         font-size: 26px;
-        padding: 40px 0;
+        padding: 40px 0 20px 0;
         border-bottom: 1px solid #eee;
         &:last-child{
             border-bottom: none;
