--- a/src/pages/index/style.module.scss
+++ b/src/pages/index/style.module.scss
@@ -1,16 +1,23 @@
 @import '@styles/variable.scss';
 .BaseConx{
     width: 100%;
-    min-height: 100vh;
-    padding: 80px 32px;
-    background-image: url('../../assets/backgroundImg/background1.jpeg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;  
-    box-sizing: border-box;  
+    height: 100vh;
+    padding: 60px 0 112px 0;
+    // background-image: url('../../assets/backgroundImg/background1.jpeg');
+    // background-size: 100% 100%;
+    // background-repeat: no-repeat;  
+    box-sizing: border-box;   
+    background-color: #eee; 
+    overflow: hidden;
+    .scrollStyle{  
+        height: calc( 100vh - 420px);
+        padding: 32px;
+        overflow-y: scroll;
+    }
     .text{
         width: 100%;
-        height: 240px;
-        padding: 32px;
+        height: 180px;
+        padding: 32px 40px; 
         border-radius: 16px;
         box-sizing: border-box;
         background-color: #fff; 
@@ -51,22 +58,15 @@
 
     .box{
         width: 100%;
-        margin-top: 28px; 
+        margin: 26px 0; 
         border-radius: 16px;
         padding: 32px;
         color: rgb(150, 148, 148);
         box-sizing: border-box;
         background-color: #fff;
         box-shadow: 0px 6px 36px 0px rgba(66, 66, 70, 0.08);
-        .tit{ 
-            font-size: 38px;
-            height: 60px;
-            color: #333;
-            border-bottom: 3px solid #eee; 
-            position: relative; 
-        }
         .psg{
-            font-size: 30px;
+            font-size: 28px;
             margin-top: 20px;
             display: flex;
             align-items: center;
