--- a/src/components/BaseTitle/style.module.scss
+++ b/src/components/BaseTitle/style.module.scss
@@ -1,7 +1,8 @@
-.basewrap{
-    font-size: 32px;
+.basewrap {
+    font-size: 30px;
     height: 60px;
+    line-height: 60px;
     color: #333;
-    border-bottom: 3px solid #eee; 
-    position: relative; 
+    border-bottom: 1px solid #eee;
+    position: relative;
 }
