--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,7 +1,7 @@
 // 很多红色的字体
 $primary-red-color: #fa414d;
 
-$red-color: #ff5947;
+$red-color: #379cf5;
 
 // 很多红色的小方块
 $background-red-color: #fc5661;
