--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,7 @@ body {
 	// padding-bottom: constant(safe-area-inset-bottom);
 	// padding-bottom: env(safe-area-inset-bottom);
 	box-sizing: border-box;
+    font-family: PingFangSC-Medium;
 }
 img {
 	pointer-events: none !important; /* 禁止长按图片保存 */
