--- a/src/components/Swiper/style.module.scss
+++ b/src/components/Swiper/style.module.scss
@@ -1,12 +1,25 @@
 .swipBox{  
-    background-color: #fff; 
-    overflow: hidden; 
+    width: 100%;
+    height: auto;
+    background-color: #fff;      
+    box-sizing: border-box;
+    margin-bottom: 32px;
+    padding: 16px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    box-shadow: 0px 6px 36px 0px rgba(66, 66, 70, 0.08);
+    swiper{
+        height: 400px !important; 
+        border-radius: 6px;
+        overflow: hidden;
+    }
     .swiperImg{
         width: 100%;
-        height: 100%;   
+        height: 400px;   
         .img{
             width: 100%;
             height: 100%; 
+            object-fit: contain;
         }
     }
 }
