--- a/src/pages/index/style.module.scss
+++ b/src/pages/index/style.module.scss
@@ -2,38 +2,32 @@
 .BaseConx{
     width: 100%;
     height: 100vh;
-    padding: 60px 0 112px 0;
-    // background-image: url('../../assets/backgroundImg/background1.jpeg');
-    // background-size: 100% 100%;
-    // background-repeat: no-repeat;  
+    padding: 0 32px; 
     box-sizing: border-box;   
     background-color: #eee; 
-    overflow: hidden;
-    .scrollStyle{  
-        height: calc( 100vh - 420px);
-        padding: 32px;
-        overflow-y: scroll;
-    }
+    overflow: scroll; 
     .text{
+        margin-top: 32px;
         width: 100%;
-        height: 180px;
-        padding: 32px 40px; 
-        border-radius: 16px;
+        padding: 32px; 
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
         box-sizing: border-box;
         background-color: #fff; 
         box-shadow: 0px 6px 36px 0px rgba(66, 66, 70, 0.08);
         display: flex;
-        align-items: center; 
+        align-items: center;  
         .avtars{  
             width: 120px;
             height: 120px;
-            border-radius: 50%;
+            border-radius: 8px;
             box-sizing: border-box;
             background-color: #fff; 
+            overflow: hidden;
             .Img{
                 width: 100%;
-                height: 100%;
-                border-radius: 50%;
+                height: 100%; 
+                object-fit: contain;
             }
         }
         .sention{   
@@ -58,8 +52,8 @@
 
     .box{
         width: 100%;
-        margin: 26px 0; 
-        border-radius: 16px;
+        margin: 32px 0; 
+        border-radius: 8px;
         padding: 32px;
         color: rgb(150, 148, 148);
         box-sizing: border-box;
@@ -73,10 +67,11 @@
             justify-content: space-between;
         } 
         .tg{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center; 
             box-sizing: border-box; 
-            .clr{
-                clear: both;
-            }
+            padding: 16px;
         }
         .bk{
             display: flex;
