--- a/src/components/Swiper/style.module.scss
+++ b/src/components/Swiper/style.module.scss
@@ -11,15 +11,15 @@
     swiper{
         height: 400px !important; 
         border-radius: 6px;
-        overflow: hidden;
+        overflow: hidden; 
     }
     .swiperImg{
         width: 100%;
-        height: 400px;   
+        height: 440px;   
         .img{
             width: 100%;
             height: 100%; 
-            object-fit: contain;
+            object-fit: cover;
         }
     }
 }
