--- a/src/components/Tag/style.module.scss
+++ b/src/components/Tag/style.module.scss
@@ -2,13 +2,13 @@
 .tag{
     width:max-content;
     margin-left: 10px;
-    font-size: 16px;
+    font-size: 18px;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 12px;
-    border-radius: 6px;
+    padding: 4px 12px;
+    border-radius: 8px;
     background-color: $red-color; 
     font-family: PingFangSC-Medium;
 }
